--- a/docs/create/azure/terraform-private-endpoint/index-terraform-private-endpoint.mdx
+++ b/docs/create/azure/terraform-private-endpoint/index-terraform-private-endpoint.mdx
@@ -88,8 +88,18 @@ terraform output redisgeek_config
 
 ### Resources
 
+#### How to use Redis Cache for Redis like a Pro
+
 <div class="text--center">
     <iframe width="760" height="415" src="https://www.youtube.com/embed/eThj-jwViZw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+
+#### Do More with Azure Cache for Redis, Enterprise Tiers
+
+
+<div class="text--center">
+   <iframe width="760" height="415" src="https://www.youtube.com/embed/t6XQHsKFMKQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 ### References
