--- a/docs/create/azure/index-azure.mdx
+++ b/docs/create/azure/index-azure.mdx
@@ -19,7 +19,7 @@ The following links provides you with the available options for create instances
  </div>
  <div class="col">
     <RedisCard 
-        title="Azure Cache for Redis Enterprise via Terraform" 
+        title="Azure Cache for Redis Enterprise using Terraform" 
         description="Deploy Redis Enterprise over Azure Cloud using Terraform" 
         page="/create/azure/terraform-simple"
         />
@@ -29,8 +29,8 @@ The following links provides you with the available options for create instances
 <div class="row">
     <div class="col">
         <RedisCard
-            title="Terraform Azure Cache for Redis Enterprise with Private Endpoint"
-            description="Restrict private endpoint access to specific subnets"
+            title="Azure Cache for Redis Enterprise using Terraform with Private Endpoint"
+            description="Restrict Private Endpoint Access to specific subnets"
             page="/create/azure/terraform-private-endpoint"
         />
     </div>
