added community links

--- a/docs/community/discord/index-discord.mdx
+++ b/docs/community/discord/index-discord.mdx
@@ -5,50 +5,51 @@ sidebar_label: Discord
 slug: /community/discord/
 ---
 
-The Redis Discord server is a place where you can learn, share, and collaborate about anything and everything Redis. Connect with users from the community, Redis University, and Redis Labs. Get your questions answered and learn cool new tips and tricks! Watch for notifications of the latest content from Redis and the community. And share your own content with the community.
+The [Redis Discord server](https://discord.gg/redis) is a place where you can learn, share, and collaborate about anything and everything Redis.
+
+- Connect with users from the community, Redis University, and Redis Labs.
+- Get your questions answered and learn cool new tips and tricks.
+- Watch for notifications of new content from Redis and the community.
+- Share your knowledge and expertise with others.
 
 
 ## How to join
 
-Joining is easy. If you have a Discord account, just go to https://discord.gg/redis and your in. If you don't have a Discord account, you'll need to create one first, then use the above invite. You can download Discord from their [website](https://discord.com/) or just use it in a browser. You can even use thier mobile app. It's up to you.
+If you already have a Discord account, joining is easy. Just go to https://discord.gg/redis and your in.
+
+If you don't have a Discord account, you'll need to [create one](https://discord.com/register). Once you have an account, you can [download Discord](https://discord.com/) for you desktop, get the mobile app, or just use it in a browser.
+
 
 ## Server rules
 
-Please take a look at our community rules.
-
-0. Be patient, respectful, and forebearing.
-1. Sending and linking harmful material will result in an *immediate* and *permanent* ban.
-2. No shady links (e.g. to .jar files, or .exe files).
-3. **DO NOT** spam.
-4. **DO NOT** use vulgar or explicit language—keep it family friendly.
-5. **DO NOT** claim authorship of assets that are not yours. Plagiarism will result in a ban.
-6. **DO** share your projects and ideas, but **DO NOT** advertise or solicit in the chat.
-7. **DO NOT** ping @here or @everyone.
-8. **DO NOT** send friend requests to the admins. They will be ignored.
-9. Remember. Not everyone is in the same timezone as you.
-
-Also, we expect you to follow the [Redis Community Guidelines & Code of Conduct](https://redislabs.com/community/community-guidelines-code-of-conduct/) while on the Discord server.
+One you are on the server, you should be aware of our rules:
 
 
-## Channel guide
-
-  - start here
-  - news and announcements (you're welcome to post in events, content, live stream, jobs)
-  - topical chat (Redis, modules, and language specific channels)
-  - Redis University, start with ruxxx (include a regex for geekiness), use these for questions and discussion around specific RedisU classes.
-  - Redis Meetups voice and text channels used for live events. Feel free to hop into a video chat room and say hi
-  - Help channels - ask your questions here.
-
+- Be respectful.
+- Sending and linking harmful material will result in an immediate and permanent ban.
+- No shady links (e.g. to .jar files, or .exe files).
+- **DO NOT** spam. Also, **DO NOT** spam.
+- **DO NOT** use vulgar or explicit language—keep it family friendly.
+- **DO NOT** claim authorship of assets that are not yours. Plagiarism will result in a ban.
+- **DO** share your projects and ideas, but **DO NOT** advertise or solicit in the chat.
+- **DO NOT** ping @here or @everyone and **DO NOT** spam your messages to multiple channels.
+- **DO NOT** DM the admins or send us friend requests unless we invite you to do so.
+- Abide by the **[Redis Community Guidelines & Code of Conduct](https://redislabs.com/community/community-guidelines-code-of-conduct/)**.
 
 ## How to get help
 
-We have a help system inspired by the one used by the most excellent Python Discord.
+Got a question you want answered? Got a problem you can’t figure out? Don’t worry. Happens to the best of us. We have a help system inspired by the one used by the most excellent [Python Discord](https://pythondiscord.com/).
 
-At any given time there are at most three help channels availalbe. Just enter your question to claim the channel. It will be moved from HELP-AVAILABLE to HELP-OCCUPIED. When the question has been answered, you can close the channel with the /close command and then it will be moved to HELP-DORMANT. If the channel is inactive for more than two days it will be automatically closed. Either way, the channel will eventually be recycled for new questions and new questioners.
+### tl;dr
 
-Who can answer your question? Well... anyone. It might be an admin, a Redis Labs employee, or a fellow Redis user. It's possible your question might not be answered. Perhaps nobody knows the answer or maybe folks are confused by your question. *You* might answer it yourself if you figure it out before someone else does.
+Ask a question in a channel in :question: **Help: Available**. That channel moves to :raised_hand: **Help: In Use**. Converse, discuss, get an answer. Close the channel with `/close` when you’re done and it moves to :zzz: **Help: Dormant**.
 
+### Full Version
 
-## You made it this far
+So, we built a help system to make it easier to ask and answer. There are a series of help channels on the server that all start with `help-` followed by a letter in the NATO Phonetic Alphabet (you know, the whole *alfa bravo charlie* thing). There are 26 channels grouped into **Help: Available**, **Help: In Use**, and **Help: Dormant**.
 
-Congratulations on actually reading the Redis Discord server guide. Life is busy and we tend to skim things but you've done the work. As a reward for your attention to detail, please accept our thanks and an elevated level of access on the server. When you join, enter the command `/redeem IAMSOGREAT` in any channel to claim your reward.
+:question: **Help: Available** contains channels that are available for a question. If you have a question, you can claim this channel simply by posting it there. The channel will immediately be moved to *Help: In Use*.
+
+:raised_hand: **Help: In Use** has channels that are being used to answer a question. If you have the answer to a fellow user’s question, post it here. If you asked the question, other users may answer it. If someone has answered your question—or perhaps you answer it yourself—you can close the channel by typing `/close`. Channels will automatically close if they are inactive for 48 hours. Closed channels are moved to *Help: Dormant*.
+
+:zzz:  **Help: Dormant** is for channels that are not currently in use. You can read them—useful as there are lots of answered questions here—but you cannot post to them. When someone claims a channel in *Help: Available*, a random channel is selected from *Help: Dormant* to replace it.
