--- a/docs/get-involved/index-getinvolved.mdx
+++ b/docs/get-involved/index-getinvolved.mdx
@@ -1,8 +1,8 @@
 ---
-id: index-community
-title: Participate in the Redis Community
+id: index-getinvolved
+title: Get Involved with Redis Community
 sidebar_label: Overview
-slug: /community/
+slug: /get-involved/
 ---
 
 import RedisCard from '@site/src/theme/RedisCard';
@@ -17,7 +17,7 @@ Need help? Wanna share something cool? Want to learn more Redis? Check out some 
     <RedisCard
       title="Redis Discord"
       description="Join the Redis Discord to get help and share your knowledge"
-      page="/community/discord"
+      page="/get-involved/discord"
     />
   </div>
 
@@ -25,7 +25,7 @@ Need help? Wanna share something cool? Want to learn more Redis? Check out some 
     <RedisCard
       title="Redis Live"
       description="Watch live Redis content on Redis Live"
-      page="/community/redis-live"
+      page="/get-involved/redis-live"
     />
   </div>
 
