--- a/docs/community/discord/index-discord.mdx
+++ b/docs/community/discord/index-discord.mdx
@@ -2,7 +2,7 @@
 id: index-discord
 title: Redis Discord Server
 sidebar_label: Discord
-slug: /community/discord/
+slug: /get-involved/discord/
 ---
 
 The [Redis Discord server](https://discord.gg/redis) is a place where you can learn, share, and collaborate about anything and everything Redis.
