--- a/docs/get-involved/index-getinvolved.mdx
+++ b/docs/get-involved/index-getinvolved.mdx
@@ -8,7 +8,7 @@ slug: /get-involved/
 import RedisCard from '@site/src/theme/RedisCard';
 
 
-Need help? Wanna share something cool? Want to learn more Redis? Check out some of the great community resources at your disposal:
+Need help with Redis? Do you want to share something cool? Want to learn more Redis? Check out some of the great community resources at your disposal:
 
 
 <div class="row">
