--- a/docs/get-involved/index-getinvolved.mdx
+++ b/docs/get-involved/index-getinvolved.mdx
@@ -2,7 +2,7 @@
 id: index-getinvolved
 title: Get Involved with Redis Community
 sidebar_label: Overview
-slug: /get-involved/
+slug: /community/
 ---
 
 import RedisCard from '@site/src/theme/RedisCard';
