--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -2,7 +2,23 @@
 id: index-redis-live
 title: Redis Live
 sidebar_label: Redis Live
-slug: /get-involved/redis-live/
+slug: /community/redis-live/
 ---
 
 Redis Live hosts a variety of live-streamed content. [Sign up](https://meetups.redislabs.com/redis-live/) to get notified of new shows, and watch live on [YouTube](https://www.youtube.com/redislabs) or [Twitch](https://www.twitch.tv/redislabs). Do I need to tell you to like and subscribe?
+
+### Redis Monthly Live
+
+Every month, *Redis Monthly Live* hosts speakers from around the world and we talk about everything Redis. Watch for the *Redis Command of the Month* with Justin Castilla!
+
+<div class="text--center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/P7H1H-Zj5oU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+### Redis in the Cloud
+
+*Redis in the Cloud* is a monthly show that highlights the numerous ways to leverage Redis Enterprise to your cloud native data. Solution Architects will walk you through live demos showcasing the many amazing features of Redis Enterprise.
+
+<div class="text--center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/zw7vu1vaVwg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
