--- a/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
+++ b/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-usingnodejs
-title: Importing JSON data into Redis using NodejS
+title: Importing JSON data into Redis using NodeJS
 sidebar_label: RedisJSON using NodeJS
 slug: /howtos/redisjson/using-nodejs
 ---
