--- a/docs/get-involved/index-getinvolved.mdx
+++ b/docs/get-involved/index-getinvolved.mdx
@@ -17,7 +17,7 @@ Need help? Wanna share something cool? Want to learn more Redis? Check out some 
     <RedisCard
       title="Redis Discord"
       description="Join the Redis Discord to get help and share your knowledge"
-      page="/get-involved/discord"
+      page="/community/discord"
     />
   </div>
 
@@ -25,7 +25,7 @@ Need help? Wanna share something cool? Want to learn more Redis? Check out some 
     <RedisCard
       title="Redis Live"
       description="Watch live Redis content on Redis Live"
-      page="/get-involved/redis-live"
+      page="/community/redis-live"
     />
   </div>
 
