--- a/docs/howtos/redisjson/storing-complex-json-document/index-storing-complex-json-document.mdx
+++ b/docs/howtos/redisjson/storing-complex-json-document/index-storing-complex-json-document.mdx
@@ -81,7 +81,7 @@ Copy the code and save it in a file called ```employee.py```
   pip  install redis
  ```
 
-### Step 5. Execute the pythin script
+### Step 5. Execute the python script
 
 Execute the below script and ensure that it executes successfully.
 
