--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -128,3 +128,10 @@ A complete introduction to Redis for Python developers.
 <div class="text--center">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/BxRJRNt7Qwc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
+
+### References
+
+- [ Storing JSON document in Redis using Python](https://developer.redislabs.com/howtos/redisjson/storing-json-document#redisjson-python-client)
+- [Python based application on Heroku using Redis](https://developer.redislabs.com/howtos/herokupython/)
+- [How to build a Rate Limiter using Redis](https://developer.redislabs.com/howtos/ratelimiting/)
+- [Writing Your Serverless function using RedisGears Browser Tool](https://developer.redislabs.com/explore/redisinsight/redisgears/)
