--- a/docs/howtos/redisjson/index-redisjson.mdx
+++ b/docs/howtos/redisjson/index-redisjson.mdx
@@ -25,8 +25,8 @@ The following links provides you with the available options to get started with 
 
   <div class="col">
     <RedisCard
-        title="Import JSON data into Redis using Python"
-        description="How to store and retrieve JSON document in Redis"
+        title="RedisJSON and Python"
+        description="How to import JSON document in Redis using Python"
         page="/howtos/redisjson/storing-json-document"
         />
  </div>
@@ -34,7 +34,7 @@ The following links provides you with the available options to get started with 
 
   <div class="col">
     <RedisCard
-        title="Import Nested JSON data into Redis using Python"
+        title="Import Nested JSON data using Redis & Python"
         description="How to store and retrieve Nested JSON document in Redis"
         page="/howtos/redisjson/storing-complex-json-document"
         />
@@ -45,7 +45,7 @@ The following links provides you with the available options to get started with 
 
  <div class="col">
     <RedisCard 
-        title="Import JSON data into Redis using NodeJS" 
+        title="RedisJSON and NodeJS" 
         description="How to store and retrieve JSON document in Redis using NodeJS" 
         page="/howtos/redisjson/using-nodejs"
         />
