--- a/docs/howtos/redisjson/storing-json-document/index-storing-json-document.mdx
+++ b/docs/howtos/redisjson/storing-json-document/index-storing-json-document.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-storing-json-document
-title: Storing and retrieving JSON document  
-sidebar_label: Storing and retrieving JSON document 
+title: Storing and retrieving JSON document using Redis & Python  
+sidebar_label: Storing and retrieving JSON document using Python
 slug: /howtos/redisjson/storing-json-document
 ---
 
