--- a/docs/howtos/redisjson/index-redisjson.mdx
+++ b/docs/howtos/redisjson/index-redisjson.mdx
@@ -25,18 +25,18 @@ The following links provides you with the available options to get started with 
 
   <div class="col">
     <RedisCard
-        title="RedisJSON and Python"
-        description="How to import JSON document in Redis using Python"
-        page="/howtos/redisjson/storing-json-document"
+        title="Import Nested JSON data using Redis & Python"
+        description="How to store and retrieve Nested JSON document in Redis"
+        page="/howtos/redisjson/storing-complex-json-document"
         />
- </div>
+   </div>
 
 
   <div class="col">
     <RedisCard
-        title="Import Nested JSON data using Redis & Python"
-        description="How to store and retrieve Nested JSON document in Redis"
-        page="/howtos/redisjson/storing-complex-json-document"
+        title="RedisJSON and Python"
+        description="How to import JSON document in Redis using Python"
+        page="/howtos/redisjson/storing-json-document"
         />
  </div>
 </div>
@@ -50,6 +50,15 @@ The following links provides you with the available options to get started with 
         page="/howtos/redisjson/using-nodejs"
         />
  </div>
+
+  <div class="col">
+    <RedisCard
+        title="How to index JSON documents using RedisJSON & RediSearch"
+        description="How to index JSON document using RedisJSON & RediSearch"
+        page="/howtos/redisjson/jsonind-document"
+        />
+  </div>
+
 
 
  <div class="col">
