--- a/docs/develop/python/fastapi/index-fastapi.mdx
+++ b/docs/develop/python/fastapi/index-fastapi.mdx
@@ -15,7 +15,7 @@ This tutorial helps you get started with Redis and FastAPI.
 ## Introduction
 
 [FastAPI](https://github.com/tiangolo/fastapi) is a Python web framework based on
-the [Flask](http://flask.pocoo.org/) microframework. With deep support for
+the [Starlette](https://www.starlette.io/) microframework. With deep support for
 asyncio, FastAPI is indeed _very fast_. FastAPI also distinguishes itself with
 features like automatic [OpenAPI (OAS)](https://openapis.org/) documentation for your API,
 easy-to-use data validation tools, and more.
