--- a/docs/howtos/redisjson/index-redisjson.mdx
+++ b/docs/howtos/redisjson/index-redisjson.mdx
@@ -69,9 +69,18 @@ The following links provides you with the available options to get started with 
         />
  </div>
 
+<div class="row">
+
+ <div class="col">
+    <RedisCard
+        title="RedisJSON and Ruby"
+        description="How to import JSON document into Redis using Ruby"
+        page="/howtos/redisjson/using-ruby"
+        />
+ </div>
 
 </div>
-
+</div>
 
 
 
