--- a/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
+++ b/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-usingnodejs
-title: Importing JSON data into Redis using NodeJS
-sidebar_label: RedisJSON using NodeJS
+title: RedisJSON and NodeJS
+sidebar_label: RedisJSON and NodeJS
 slug: /howtos/redisjson/using-nodejs
 ---
 
