--- a/docs/howtos/redisjson/using-ruby/index-usingruby.mdx
+++ b/docs/howtos/redisjson/using-ruby/index-usingruby.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-usingruby
-title: Importing JSON data into Redis using Ruby
-sidebar_label: RedisJSON using Ruby
+title: RedisJSON and Ruby
+sidebar_label: RedisJSON and Ruby
 slug: /howtos/redisjson/using-ruby
 ---
 
