--- a/docs/howtos/redisjson/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisjson/getting-started/index-gettingstarted.mdx
@@ -91,7 +91,7 @@ Here is the command to insert JSON data into Redis:
 <b>Command</b>:
 
 ```
-JSON.SET employee_profile . '{ "employee": { "name": "alpha", "age": 40,"married": true }  } '
+JSON.SET employee_profile $ '{ "employee": { "name": "alpha", "age": 40,"married": true }  } '
 ```
 
 <b>Result</b>:
