--- a/docs/howtos/redisjson/jsonind-document/index-jsonind-document.mdx
+++ b/docs/howtos/redisjson/jsonind-document/index-jsonind-document.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-jsonind-document
-title: How to index JSON documents using RedisJSON & RediSearch
-sidebar_label: How to index JSON documents using RedisJSON & RediSearch
+title: How to index JSON document using RediSearch
+sidebar_label: How to index JSON document using RediSearch
 slug: /howtos/redisjson/jsonind-document
 ---
 
