--- a/docs/howtos/redisjson/redisjson-cheatsheet/index-redisjson-cheatsheet.mdx
+++ b/docs/howtos/redisjson/redisjson-cheatsheet/index-redisjson-cheatsheet.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-redisjson-cheatsheet
 title: RedisJSON Cheatsheet
-sidebar_label: RedisJSON Cheatsheet
+sidebar_label: RedisJSON CheatSheet
 slug: /howtos/redisjson/redisjson-cheatsheet
 ---
 
