--- a/docs/howtos/redisjson/index-redisjson.mdx
+++ b/docs/howtos/redisjson/index-redisjson.mdx
@@ -53,7 +53,7 @@ The following links provides you with the available options to get started with 
 
   <div class="col">
     <RedisCard
-        title="How to index JSON documents using RedisJSON & RediSearch"
+        title="How to index JSON documents using RediSearch"
         description="How to index JSON document using RedisJSON & RediSearch"
         page="/howtos/redisjson/jsonind-document"
         />
@@ -64,7 +64,7 @@ The following links provides you with the available options to get started with 
  <div class="col">
     <RedisCard
         title="RedisJSON Cheatsheet"
-        description="RedisJSON Cheatsheet"
+        description="Basic RedisJSON commands"
         page="/howtos/redisjson/redisjson-cheatsheet"
         />
  </div>
