--- a/docs/howtos/redisjson/storing-json-document/index-storing-json-document.mdx
+++ b/docs/howtos/redisjson/storing-json-document/index-storing-json-document.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-storing-json-document
-title: Storing and retrieving JSON document using Redis & Python  
+title: RedisJSON and Python 
 sidebar_label: Storing and retrieving JSON document using Python
 slug: /howtos/redisjson/storing-json-document
 ---
