--- a/docs/howtos/redisjson/storing-json-document/index-storing-json-document.mdx
+++ b/docs/howtos/redisjson/storing-json-document/index-storing-json-document.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-storing-json-document
 title: RedisJSON and Python 
-sidebar_label: Storing and retrieving JSON document using Python
+sidebar_label: RedisJSON and Python
 slug: /howtos/redisjson/storing-json-document
 ---
 
