Added Shopping Cart

--- a/docs/howtos/redisjson/index-redisjson.mdx
+++ b/docs/howtos/redisjson/index-redisjson.mdx
@@ -68,8 +68,17 @@ The following links provides you with the available options to get started with 
         page="/howtos/redisjson/redisjson-cheatsheet"
         />
  </div>
+</div>
 
 <div class="row">
+
+ <div class="col">
+    <RedisCard
+        title="Shopping Cart using RedisJSON"
+        description="Implementing a Shopping Cart using NodeJS & RedisJSON"
+        page="/howtos/redisjson/shoppingcart/"
+        />
+ </div>
 
  <div class="col">
     <RedisCard
@@ -79,7 +88,6 @@ The following links provides you with the available options to get started with 
         />
  </div>
 
-</div>
 </div>
 
 
