--- a/docs/howtos/redisjson/storing-json-document/index-storing-json-document.mdx
+++ b/docs/howtos/redisjson/storing-json-document/index-storing-json-document.mdx
@@ -69,7 +69,7 @@ In the code above, we use JSON.GET to extract the JSON elements.
 ### Step 4. Load Redis Module
 
 ```bash
- pip  install redis
+ pip  install rejson
 ```
 
 ### Step 5. Verify the JSON document added to Redis
