--- a/docs/howtos/redisjson/storing-complex-json-document/index-storing-complex-json-document.mdx
+++ b/docs/howtos/redisjson/storing-complex-json-document/index-storing-complex-json-document.mdx
@@ -78,7 +78,7 @@ Copy the code and save it in a file called ```employee.py```
 ### Step 4. Load Redis Module
 
  ```bash
-  pip  install redis
+  pip  install rejson
  ```
 
 ### Step 5. Execute the python script
