--- a/docs/howtos/redisjson/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisjson/getting-started/index-gettingstarted.mdx
@@ -49,7 +49,7 @@ Under RedisJSON, a key can contain any valid JSON value. It can be scalar, objec
 <b>Command</b>:
 
 ```
-JSON.SET scalar .  ' "Hello JSON!" '
+JSON.SET greetings .  ' "Hello JSON!" '
 ```
 
 <b>Result</b>:
@@ -63,7 +63,7 @@ Use JSON.GET to return the value at path in JSON serialized form:
 <b>Command</b>:
 
 ```
-JSON.GET scalar
+JSON.GET greetings
 ```
 
 <b>Result</b>:
