--- a/docs/howtos/redisjson/index-redisjson.mdx
+++ b/docs/howtos/redisjson/index-redisjson.mdx
@@ -72,6 +72,7 @@ The following links provides you with the available options to get started with 
 
 <div class="row">
 
+
  <div class="col">
     <RedisCard
         title="Shopping Cart using RedisJSON"
@@ -85,6 +86,14 @@ The following links provides you with the available options to get started with 
         title="RedisJSON and Ruby"
         description="How to import JSON document into Redis using Ruby"
         page="/howtos/redisjson/using-ruby"
+        />
+ </div>
+
+ <div class="col">
+    <RedisCard
+        title="Visualize your JSON data using RedisInsight"
+        description="How to visualize and edit your JSON data using RedisInsight"
+        page="/howtos/redisjson/using-redisinsight"
         />
  </div>
 
