--- a/docs/howtos/redisjson/index-redisjson.mdx
+++ b/docs/howtos/redisjson/index-redisjson.mdx
@@ -46,7 +46,7 @@ The following links provides you with the available options to get started with 
  <div class="col">
     <RedisCard 
         title="RedisJSON and NodeJS" 
-        description="How to store and retrieve JSON document in Redis using NodeJS" 
+        description="How to import JSON document in Redis using NodeJS" 
         page="/howtos/redisjson/using-nodejs"
         />
  </div>
@@ -94,6 +94,16 @@ The following links provides you with the available options to get started with 
         title="Visualize your JSON data using RedisInsight"
         description="How to visualize and edit your JSON data using RedisInsight"
         page="/howtos/redisjson/using-redisinsight"
+        />
+ </div>
+</div>
+<div class="row">
+
+   <div class="col">
+    <RedisCard
+        title="Storing and retrieving JSON document using NodeJS"
+        description="How to store and retrieve JSON document using NodeJS"
+        page="/howtos/redisjson/storing-json-using-nodejs"
         />
  </div>
 
