--- a/docs/howtos/redisjson/using-redisinsight/index-usingredisinsight.mdx
+++ b/docs/howtos/redisjson/using-redisinsight/index-usingredisinsight.mdx
@@ -5,7 +5,8 @@ sidebar_label: RedisJSON using RedisInsight
 slug: /howtos/redisjson/using-redisinsight
 ---
 
-RedisInsight provides built-in support for the RedisJSON, RediSearch, RedisGraph, Redis Streams, and RedisTimeSeries modules to make it even easier to query, visualize, and interactively manipulate search indexes, graphs, streams, and time-series data. Support for RedisJSON on Redis Cluster was introduced for the first time in RedisInsight v1.8.0. With RedisInsight, you can visualize and edit your JSON data 
+RedisInsight provides built-in support for the RedisJSON, RediSearch, RedisGraph, Redis Streams, and RedisTimeSeries modules to make it even easier to query, visualize, and interactively manipulate search indexes, graphs, streams, and time-series data. Support for RedisJSON on Redis Cluster was introduced for the first time in RedisInsight v1.8.0. With RedisInsight, you can visualize and edit your JSON data flawlessly.
+
 
 Below steps shows how to get started with RedisJSON using RedisInsight:
 
