--- a/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
+++ b/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
@@ -14,7 +14,9 @@ The 'ReJSON Module plugin for node_redis' package allows node_redis (2.8+) to in
 
 Follow the below steps to get started with RedisJSON and Node.js:
 
-### Step 1. Run Redismod docker container
+### Step 1. Run RedisMod Docker container
+
+This simple container image bundles together the latest stable releases of Redis and select Redis modules from Redis Lab
 
 
 ```bash
